<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Aozora - Aprenda Japonês</string>
    <string name="licenseMain">O conteúdo acessado a partir desta página é proveniente do guia <a href="https://guidetojapanese.org/learn/">Tae Kim\'s Guide to Learning Japanese</a>\n
        Este trabalho está sob licença de <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a>\n
        Copyright © 2003-2007 Tae Kim (taekim.japanese@gmail.com)</string>
    <string name="licenseGuilherme">O conteúdo desta página é proveniente do guia <a href="https://guidetojapanese.org/learn/">Tae Kim\'s Guide to Learning Japanese</a>\n
        Este trabalho está sob licença de <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1">CC BY-NC-SA 4.0</a>\n
        Copyright © 2003-2007 Tae Kim (taekim.japanese@gmail.com)\n
        Portuguese Translation by Guilherme Kiyohara</string>
    <string name="estudo1"> 1. <u>Introdução</u></string>
    <string name="estudo2"> 2. <u>Recursos Úteis</u></string>
    <string name="estudo3"> 3. <u>Antes de Começar</u></string>
    <string name="estudo4"> 4. <u>Sistema de Escrita</u></string>
    <string name="estudo5"> 5. <u>Hiragana</u></string>
    <string name="estudo6"> 6. <u>Katakana</u></string>
    <string name="estudo7"> 7. <u>Kanji</u></string>
    <string name="estudo8"> 8. <u>Expressando o Estado-de-ser</u></string>
    <string name="estudo9"> 9. <u>Introdução às Partículas (は、も、が)</u></string>
    <string name="estudo10">10. <u>Adjetivos</u></string>
    <string name="estudo11">11. <u>Básico sobre Verbos</u></string>
    <string name="estudo12">12. <u>Verbos Negativo</u></string>
    <string name="estudo13">13. <u>Verbos Pretérito</u></string>
    <string name="estudo14">14. <u>Partículas usadas com verbos (を、に、へ、で)</u></string>
    <string name="estudo15">15. <u>Verbos Transitivos e Intransitivos</u></string>
    <string name="estudo16">16. <u>Oração Subordinada Descritiva</u></string>
    <string name="estudo17">17. <u>Ordem das Sentenças</u></string>
    <string name="estudo18">18. <u>Partículas relacionadas com Substantivos (と、や、とか、の)</u></string>
    <string name="estudo19">19. <u>Advérbios</u></string>
    <string name="estudo20">20. <u>Partículas de Fim de Sentença (ね、よ、よね)</u></string>
    <string name="textEstudo5a">
        <font color="#00008B"><big><b><u>O que é Hiragana?</u></b></big></font>\n\n

        Hiragana é o alfabeto fonético básico do Japonês. Ele representa todos os sons na língua Japonesa. Portanto,
        você pode teoricamente escrever tudo em hiragana. No entanto, como o Japonês é escrito sem nenhum espaço, isto irá criar praticamente
        um texto indecifrável.\n\n

        Aqui está uma tabela e os sons correspondentes à pronúncia em Português. Em Japonês, escrever com a ordem e direção dos traços é
        importante, especialmente para os kanji. Como as letras escritas à mão são um pouco diferentes das letras comerciais (assim como o “a”
        é diferentedo “a” escrito a mão), é recomendavel procurar uma fonte como um website ou um livro que mostre como os caracteres são
        escritos. Eu também devo enfatizar a importância da pronúncia correta de cada som, já que todas as palavras em Japonês são compostas por
        estes sons, aprender uma pronúncia incorreta de uma letra pode prejudicar seriamente sua fundação, na qual sua pronúncia se baseia.\n\n

        <font color="#00008B"><big><b><u>Hiragana Básico</u></b></big></font>
    </string>
    <string name="textEstudo5b">
        <b>NOTA:</b> O som “h” do japonês tem um som aspirado como nas palavras em inglês “house” e “help”. O som “r” do japonês tem som do “r” do
        Português parecido ao das palavras “ouro” e “aura”.\n\n

        Hiragana não é tão difícil de dominar ou ensinar, e como resultado, há uma variedade de web sites e programas grátis que já estão
        disponíveis na rede. Eu recomendo fortemente que vá para este
        <a href="https://www.coscom.co.jp/hiragana-katakana/kanatable-j.html">website</a> para ouvir a pronúncia de cada caractere.
        Eu também sugiro que grave sua pronúncia e compare com os sons para ter certeza que você está aprendendo corretamente.\n\n

        Quando estiver praticando a escrita do hiragana à mão, é importante lembrar que a ordem e a direção dos traços são importantes.
        Acredite, você irá descobrir o porquê quando você ler recados apressados de outras pessoas, que parecem nada mais que um monte de
        rabiscos. A única coisa que irá lhe ajudar é que todos escrevem na mesma ordem e o “fluxo” dos caracteres é consideravelmente
        consistente. Eu recomendo você prestar bastante atenção na ordem dos traços do hiragana desde o começo para evitar ter maus hábitos.
        Vá para este <a href="http://japanese-lesson.com/resources/pdf/characters/hiragana_writing_practice_sheets.pdf">website</a> para ver
        a ordem dos traços e praticar daí.\n\n

        <font color="#0F305C"><b>Notas</b></font>\n

        1. Você deve aprender a ordem e a direção de cada traço corretamente! Vá para
        este <a href="http://japanese-lesson.com/resources/pdf/characters/hiragana_writing_practice_sheets.pdf">website</a> para aprender.\n
        2. Vá para este <a href="https://www.coscom.co.jp/hiragana-katakana/kanatable-j.html">website</a> para ouvir a pronúncia de cada
        caractere do hiragana.\n
        3. Exceto pelo 「し」、「ち」、「つ」、e 「ん」、você pode entender o sentido de como cada letra é pronunciada, combinando a consoante
        da primeira coluna com a vogal da linha de cima. Por exemplo, 「き」 irá ser /ki/ e 「ゆ」 seria /yu/ e assim por diante.\n
        4. Como você pode ver, não são todos os sons que funcionam com o sistema de combinação das consoantes. Como escrito na tabela, 「ち」
        é pronunciado "chi" e 「つ」 é pronunciado "tsu".\n
        5. Os sons / r / ou / l / em Japonês são um pouco diferentes de qualquer som do Português. Ele envolve mais um giro e um clip pelo
        batimento da língua no céu da boca. Preste atenção nisto em toda a coluna.\n
        6. Preste atenção na diferença dos sons /tsu/ e /su/.\n
        7.O caractere 「ん」 é um caractere especial porque é raramente usado sozinho e não tem um som vogal. Ele é anexado com outro
        caractere para adicionar um som nasal / n /. Por exemplo, 「かん」 seria \'kan\' ao invés de \'ka\', 「まん」 seria \'man\' ao invés de
        \'ma\', e assim por diante.\n\n\n


        <font color="#00008B"><big><b><u>Os Sons Modificados</u></b></big></font>\n\n

        Uma vez que você memorize todos os caracteres do hiragana, você acabou de aprender o alfabeto, mas não todos os
        sons. Há mais cinco possíveis sons que são possíveis colocando duas pequenas linhas, parecidas com as aspas, chamadas dakuten （濁点）ou
        um pequeno circulo chamado handakuten （半濁点）. Isto essencialmente cria um som modificado da consoante (tecnicamente chamada uma
        consoante sonora ou「濁り」, que literalmente significa se tornar lamacento.\n\n

        Todas as possíveis combinações dos sons modificados são dados na tabela abaixo.
    </string>
    <string name="textEstudo5c">
        <font color="#0F305C"><b>Notas</b></font>\n

        1. Vá para este <a href="https://www.coscom.co.jp/hiragana-katakana/kanatable-j.html">website</a> novamente para ouvir a pronúncia
        destes sons novos.\n
        caractere do hiragana.\n
        2. Perceba que o som 「ぢ」 é essencialmente idêntico ao「じ」 e os dois são pronunciados como /ji/, enquanto que「づ」é pronunciado
        como /dzu/.\n\n\n


        <font color="#00008B"><big><b><u>\nOs 「や」、「ゆ」、e 「よ」Pequenos</u></b></big></font>\n\n

        Você pode também combinar uma consoante com um som /ya/, /yu/ ou /yo/ colocando um pequeno「や」、「ゆ」、ou 「よ」 em cada consoante
        nos caracteres com a vogal /i/.
    </string>
    <string name="textEstudo5d">
        <font color="#0F305C"><b>Notas</b></font>\n

        1. A tabela acima é a mesma que as anteriores. Combine as consoantes de cima com o som vogal da direita. Ex: きゃ = kya.\n
        2. Vá para este <a href="https://www.coscom.co.jp/hiragana-katakana/kanatable-j.html">website</a> novamente para ouvir a pronúncia
        destes sons novos. O autor decidiu incluir 「ぢゃ」、「ぢゅ」、e 「ぢょ」 mas estas combinações nunca são usadas, no lugar é sempre usado
        「じゃ」、「じゅ」、e 「じょ」.\n
        3. Também note que já que「じ」 é pronunciado /ji/, todos os pequenos sons「や」、「ゆ」、「よ」 são também baseados nisto, em outras
        palavras; /jya/, /jyu/ e /jyo/ soam como os sons /ja/, /ju/ e /jo/ do português.\n
        4. O mesmo se aplica para o 「ち」 que se torna /cha/, /chu/, /cho/ que soam como os sons /tcha/, /tchu/, /tcho/ do português; e
        「し」 que se torna /sya/, /syu/, /syo/ que que soam como os sons /sha/, /shu/, /sho/ do português.\n\n\n

        <font color="#00008B"><big><b><u>\nO「つ」Pequeno</u></b></big></font>\n\n

        O「つ」pequeno é inserido entre dois caracteres para carregar o som da consoante do segundo caractere junto com o som final do primeiro
        caractere. Por exemplo, se você inserir um「つ」pequeno entre「び」 e 「く」 para fazer 「びっく」, o som da consoante /k/ e carregado com o
        final do primeiro caractere, produzindo “bikku”. Assim como「はっぱ」 se torna "happa", 「ろっく」 se torna "rokku" e assim por diante.
        Neste <a href="https://youtu.be/ieTjbASktDw?t=24">vídeo</a> é possível ouvir a pronúncia do 「つ」pequeno a partir de exemplos.\n\n

        <font color="#0F305C"><b>Notas</b></font>\n

        1. Um 「つ」pequeno é usado para carregar o som da consoante do segundo caractere com o final do primeiro. Ex.:「がっき」 = "gakki".\n
        2. A adição de outra consoante quase sempre cria um som característico de parada. Mas certifique-se que você está fazendo esta
        parada com a consoante certa (a consoante do segundo caractere).\n\n\n


        <font color="#00008B"><big><b><u>A Vogal De Som Prolongado</u></b></big></font>\n\n

        Ufa! Você está quase terminando. Nesta última parte, nós veremos a vogal de som prolongado, que simplesmente estende a duração do som
        da vogal. Você pode estender o som da vogal de um caractere apenas colocando 「あ」、「い」ou 「う」 dependendo da vogal, de acordo com
        a tabela a seguir.
    </string>
    <string name="textEstudo5e">
        Por exemplo, se você quiser criar um som de vogal prolongada de 「か」, você deverá adicionar 「あ」 para criar 「かあ」. Outros exemplos
        incluem: 「き → きい」, 「く → くう」, 「け → けい」, 「こ → こう」, 「さ → さあ」e assim por diante. A razão disto é bem simples. Tente dizer「か」
        e「あ」separadamente. Então fale sucessivamente e o mais rápido possível. Você logo perceberá que estará estendendo o /ka/ por uma
        duração mais longa que dizer somente /ka/. Você pode tentar este exercício com as outras vogais. Tente lembrar, que na verdade, você
        está pronunciando dois caracteres com seus limites embaçados. Na verdade, você pode nem estar pensando conscientemente sobre vogais
        longas e simplesmente pronunciar as letras juntas rapidamente para conseguir o som correto. Em particular, enquanto que /ei/ pode ser
        considerado som vogal prolongado, eu acho que a pronúncia sai bem melhor simplesmente pronunciando /e/e/i/.\n\n

        É importante você se certificar que a vogal é prolongado o suficiente porque você pode estar dizendo coisas como “aqui”（ここ）ao invés de
        “Ensino Médio”（こうこう）ou “mulher de meia-idade”（おばさん）ao invés de “avó” （おばあさん）se você não esticar corretamente!\n\n

        Há algumas raras exceções quando um som vogal /e/ é estendido por um「え」ou um som vogal /o/ é estendido por um「お」. Alguns exemplos
        são「おねえさん」、「おおい」、e 「おおきい」. Preste bastante atenção nestas exceções, já que não são muitas.
    </string>
</resources>