<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/estudo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo1"
            android:textColor="@color/red"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo2"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo3"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo4"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo5"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo6"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo7"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo8"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo9"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo10"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo11"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo12"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo13"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo14"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo15"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo16"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo17"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo18"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo19"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/estudo20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectTopic"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/estudo20"
            android:textColor="@color/gray"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/textCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/licenseMain"
            android:textAlignment="center"
            android:textColorLink="@color/strongBlue"
            android:textIsSelectable="true" />
    </LinearLayout>
</ScrollView>