<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEstudo5a"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <WebView
            android:id="@+id/webHiraBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEstudo5b"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <WebView
            android:id="@+id/webHiraDakuten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEstudo5c"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <WebView
            android:id="@+id/webHiraY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEstudo5d"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <WebView
            android:id="@+id/webHiraExtended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textEstudo5e"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="16sp" />

        <View
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/licenseGuilherme"
            android:textAlignment="center"
            android:textColorLink="@color/strongBlue"
            android:textIsSelectable="true" />

    </LinearLayout>
</ScrollView>